--- a/src/PowerShell/PowerShell/src/BlazorFocused.Automation.PowerShell.csproj
+++ b/src/PowerShell/PowerShell/src/BlazorFocused.Automation.PowerShell.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet Metadata">
@@ -13,6 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="PowerShellStandard.Library" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" />
+    <PackageReference Include="System.Text.Json" />
   </ItemGroup>
 
   <ItemGroup>
