--- a/samples/Directory.Packages.props
+++ b/samples/Directory.Packages.props
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup Label="Microsoft NuGet Packages">
-    <PackageVersion Include="Microsoft.Extensions.Options" Version="9.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Options" Version="8.0.2" />
+    <PackageVersion Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
 
   <ItemGroup Label="Microsoft NuGet Packages (Test)">
@@ -18,7 +19,7 @@
   <ItemGroup Label="External Testing Packages">
     <PackageVersion Include="Bogus" Version="35.6.1" />
     <PackageVersion Include="FluentAssertions" Version="6.12.2" />
-    <PackageVersion Include="Moq" Version="4.18.3" />
+    <PackageVersion Include="Moq" Version="4.18.4" />
   </ItemGroup>
 
 </Project>
