--- a/samples/Shared/AutomationSamples.Shared.csproj
+++ b/samples/Shared/AutomationSamples.Shared.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Bogus" />
     <PackageReference Include="Microsoft.Extensions.Options" />
+    <!-- <PackageReference Include="System.Text.Json" /> -->
   </ItemGroup>
 
 </Project>
