--- a/samples/PowerShellSample/PowerShellSample.csproj
+++ b/samples/PowerShellSample/PowerShellSample.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <CopyRefAssembliesToPublishDirectory>true</CopyRefAssembliesToPublishDirectory>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,7 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\PowerShell\PowerShell\src\BlazorFocused.Automation.PowerShell.csproj" />
-    <!-- <ProjectReference Include="..\Shared\AutomationSamples.Shared.csproj" /> -->
+    <ProjectReference Include="..\Shared\AutomationSamples.Shared.csproj" />
   </ItemGroup>
 
 </Project>
